public/content/@ks-qkcp/v4.1.3/03-installation-and-upgrade/03-upgrade-kubesphere/05-appendix-ks-core.adoc
---
title: "附录 1：ks-core Helm Chart 升级参数"
weight: 05
---

== 升级 Job 配置

[%header,cols="2a,1a,2a"]
|===
| 选项                                        | 默认值        | 描述

| upgrade.enabled                            | true         | bool - 是否启用升级组件
| upgrade.image.registry                     | ""           | string - 设置升级 Job 的镜像仓库地址
| upgrade.image.repository                   | kse/ks-upgrade | string - 设置升级 Job 的镜像名称
| upgrade.image.tag                          | ""           | string - 设置升级 Job 的镜像标签
| upgrade.image.pullPolicy                   | Always       | string - 设置升级 Job 的镜像拉取策略
| upgrade.persistenceVolume.name             | ks-upgrade   | string - 设置升级 Job 的存储卷 
| upgrade.persistenceVolume.storageClassName | ""           | string - 设置升级 Job 的存储卷类
| upgrade.persistenceVolume.accessMode       | ReadWriteOnce | string - 设置升级 Job 的存储卷访问模式
| upgrade.persistenceVolume.size             | 5Gi          | string - 设置升级 Job 的存储卷容量
| upgrade.resources.limit.cpu                | 1            | string - 设置升级 Job 的 CPU 资源配额上限 
| upgrade.resources.limit.memory             | 1024Mi       | string - 设置升级 Job 的 Memory 资源配额上限
| upgrade.resources.requests.cpu             | 20m          | string - 设置升级 Job 的 CPU 资源申请配额
| upgrade.resources.requests.memory          | 100Mi        | string - 设置升级 Job 的 Memory 资源申请配额
|===

== 升级应用配置

[%header,cols="2a,1a,2a"]
|===
| 选项                                        | 默认值        | 描述

| upgrade.config.storage.local.path            | /tmp/ks-upgrade                         | string - 设置升级 Job 使用本地目录存储备份数据
| upgrade.config.storage.s3.endpoint           | ""                                      | string - 设置升级 Job 使用支持 S3 协议的对象存储服务备份数据，存储服务地址
| upgrade.config.storage.s3.region             | ""                                      | string - 设置 S3 服务数据存储区域
| upgrade.config.storage.s3.disableSSL         | false                                   | bool - 设置禁用 SSL 安全协议
| upgrade.config.storage.s3.forcePathStyle     | false                                   | bool - 设置 S3 客户端对桶使用路径式寻址
| upgrade.config.storage.s3.accessKeyID        | ""                                      | string - 设置 S3 服务账号的访问键，不使用凭证文件时是必需的
| upgrade.config.storage.s3.secretAccessKey    | ""                                      | string - 设置 S3 服务账号的访问密钥，不使用凭证文件时是必需的
| upgrade.config.storage.s3.sessionToken       | ""                                      | string - 设置 S3 服务的访问凭证文件
| upgrade.config.storage.s3.bucket             | ""                                      | string - 设置 S3 服务的存储桶
| upgrade.config.download.globalRegistryUrl    | oci://hub.kubesphere.com.cn/kse-extensions | string - 设置扩展组件的仓库地址
| upgrade.config.download.file                 | -                                       | 系统预留配置
| upgrade.config.download.http.timeout         | 20                                      | int64 - 设置拉取扩展组件的超时时间
| upgrade.config.download.http.caBundle        | ""                                      | string - 设置扩展组件仓库的自签名证书的 base64 字符串，多个自签名证书合并字符串 base64
| upgrade.config.download.http.insecureSkipVerify | true                                  | bool - 设置跳过扩展组件仓库 TLS 认证
| upgrade.config.download.oci                  | -                                       | 系统预留配置
| upgrade.config.skipValidator                 | false                                   | bool - 设置跳过升级 Job 版本校验，当前校验 KubeSphere 版本
|===

== 升级组件配置

[%header,cols="2a,1a,2a"]
|===
| 选项                                        | 默认值        | 描述

|upgrade.config.jobs.$ID.enabled	|false	|bool - 设置启用升级组件 $ID
|upgrade.config.jobs.$ID.priority	   |0      	|int - 设置组件升级顺序的优先级
|upgrade.config.jobs.$ID.extensionRef.name	|""	|string - 设置扩展组件名称
|upgrade.config.jobs.$ID.extensionRef.version	|""	|string - 设置扩展组件版本

|===

// == 升级组件清单

// [%header,cols="1a,2a"]
// |===
// | ID                         | 名称/描述

// | core                       | ks-core 核心组件
// | iam                        | 多租户管理
// | network                 | KubeSphere 网络，用于 IPPool 管理和 NetworkPolicy 管理
// | devops                  | DevOps 系统
// | storage-utils          | KubeSphere 存储
// | tower                       | KubeSphere 多集群代理连接
// | kubefed                     | 联邦集群应用管理
// | whizard-monitoring          | WizTelemetry 监控
// | whizard-notification        | WizTelemetry 通知
// | whizard-alerting            | WizTelemetry 告警
// | whizard-events              | WizTelemetry 事件
// | whizard-auditing            | WizTelemetry 审计
// | whizard-logging             | WizTelemetry 日志
// | whizard-telemetry-ruler     | WizTelemetry 事件告警
// | whizard-telemetry           | WizTelemetry 平台服务
// | vector                      | WizTelemetry 数据流水线
// | grafana                       | Grafana for WizTelemetry
// | loki                         | Grafana Loki for WizTelemetry
// | alloy                         | Grafana Alloy for WizTelemetry
// | metrics-server              | Metrics Server，集群核心监控数据的聚合器
// | opensearch                  | 用于日志存储
// | kubeedge                    | KubeEdge 边缘计算框架
// | springcloud                 | Spring Cloud，管理微服务、微服务配置和微服务网关
// | servicemesh                 | KubeSphere 服务网格
// | openpitrix                 | KubeSphere 应用商店管理
// | dmp                         | RadonDB DMP，云原生数据库管理平台
// | gateway                     | KubeSphere 网关
// | Ingress-utils                  | KubeSphere 应用路由工具

// |===